--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,17 +1,17 @@
 * {
-    color: var(--color);
+    color: var(--color-black);
     font-family: 'Inter', sans-serif;
 }
 
 body {
-    /*padding: 50px;*/
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
     margin: 0;
 }
 
 a {
-    color: var(--color);
+    color: var(--color-black);
 }
+
 input {
     height: 2rem;
     width: 100%;
@@ -26,10 +26,10 @@ input {
     background-repeat: no-repeat;
     background-position: 16px center;
     background-size: 18px 18px;
+}
 
-    &.search {
-        padding: 16px 16px 16px 42px;
-    }
+input.search {
+    padding: 16px 16px 16px 42px;
 }
 
 .text-center {
@@ -37,45 +37,41 @@ input {
 }
 
 main {
-    gap: 2em;
+    position: relative;
     display: flex;
+    flex-direction: column;
     height: 100vh;
-    justify-content: space-between;
 }
 
-section {
-    &.landing-brand {
-        flex: 1;
-        background-image: url('/images/landing-bg.png');
-        background-size: cover;
-        background-position: center;
-    }
+section.landing-brand {
+    flex: 1;
+    background-image: url('/images/landing-bg.png');
+    background-size: cover;
+    background-position: center;
+}
 
-    &.landing-content {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    &.map {
-        flex: 1;
-        /*background: red;*/
-    }
-
-    &.cta {
-        padding: 2rem;
-        flex: 1;
-        /*background: green;*/
-    }
+section.landing-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .landing-title {
     text-align: center;
-    color: #172B4D;
 }
 
 .destination-search {
+    display: flex;
+    justify-content: center;
+}
+
+.form-footer {
     display: flex;
     justify-content: center;
 }
@@ -90,56 +86,36 @@ section {
 }
 
 .btn-primary {
-    background: #50AF7E;
+    background: var(--primary-color);
     color: white;
-
-    &:hover {
-        background: linear-gradient(45deg, #388e3c, #689f38);
-        transform: translateY(-2px);
-    }
 }
 
-.pt-1 {
-    padding-top: 1rem;
+.btn-primary:hover {
+    background: #3395FF;
+    transform: translateY(-2px);
 }
 
-.form-footer {
-    display: flex;
-    justify-content: center;
-}
-
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
     main {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        /*height: 100vh;*/
-    }
-
-    section.landing-brand {
-        flex: 1;
-        background-image: url('/images/landing-bg.png');
-        background-size: cover;
-        background-position: center;
+        flex-direction: row;
+        justify-content: space-between;
     }
 
     section.landing-content {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+        position: relative;
+        background: transparent;
+        color: initial;
+        flex: 1;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
-        padding: 1rem;
-        background: rgba(0, 0, 0, 0.4);
-        color: white;
-        z-index: 1;
     }
 
-    .text-color-white-sm {
-        color: var(--color-white);
+    .landing-title {
+        color: #172B4D;
+    }
+
+    .landing-subtitle {
+        color: #333333;
     }
 }
