--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,5 @@
 * {
+    box-sizing: border-box;
     color: var(--color-black);
     font-family: 'Inter', sans-serif;
 }
@@ -6,6 +7,7 @@
 body {
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
     margin: 0;
+    padding: 0;
 }
 
 a {
@@ -74,6 +76,7 @@ section.landing-content {
 .form-footer {
     display: flex;
     justify-content: center;
+    gap: 1rem;
 }
 
 .btn {
@@ -87,6 +90,11 @@ section.landing-content {
 
 .btn-primary {
     background: var(--primary-color);
+    color: white;
+}
+
+.btn-success {
+    background: var(--success-color);
     color: white;
 }
 
