--- a/public/stylesheets/utilities/_spacing.css
+++ b/public/stylesheets/utilities/_spacing.css
@@ -8,6 +8,7 @@
 .pt-4 { padding-top: 1rem; }
 .pr-1 { padding-right: 0.25rem; }
 .pb-1 { padding-bottom: 0.25rem; }
+.pb-4 { padding-bottom: 1rem; }
 .pl-1 { padding-left: 0.25rem; }
 
 .m-0  { margin: 0; }
